--- a/TimeTrack.Api/appsettings.Development.json
+++ b/TimeTrack.Api/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "AuthOptions": {
+    "GoogleClientId": "873312241155-bo2sieuo05s3f36gk4bc2u9ammbag744.apps.googleusercontent.com",
+    "Secret":  "MyEncryptionSecret"
   }
 }
