--- a/TimeTrack.Api/appsettings.Development.json
+++ b/TimeTrack.Api/appsettings.Development.json
@@ -1,13 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Trace"
     }
   },
 
   "AuthOptions": {
     "GoogleClientId": "873312241155-bo2sieuo05s3f36gk4bc2u9ammbag744.apps.googleusercontent.com",
-    "Secret":  "MyEncryptionSecret"
+    "Secret": "MyEncryptionSecret",
+    "JwtAudience": "TimeTrackerWeb",
+    "JwtIssuer": "TimeTrackerWebApiTokenIssuer"
   }
 }
