Changed to asymmetric JWT signing and validation. Moved secrets to user-secrets instead of appconfig

--- a/TimeTrack.Api/appsettings.Development.json
+++ b/TimeTrack.Api/appsettings.Development.json
@@ -8,7 +8,8 @@
 
   "AuthOptions": {
     "GoogleClientId": "873312241155-bo2sieuo05s3f36gk4bc2u9ammbag744.apps.googleusercontent.com",
-    "Secret": "MyEncryptionSecret",
+    "PublicKey": "",
+    "PrivateKey":  "",
     "JwtAudience": "TimeTrackerWeb",
     "JwtIssuer": "TimeTrackerWebApiTokenIssuer"
   }
