--- a/TimeTrack.Api/TimeTrack.Api.csproj
+++ b/TimeTrack.Api/TimeTrack.Api.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>3041c690-554d-4aca-a0fb-f1e831fcdf8c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
