Moved CORS allowed origins to appsettings and enabled cors for all environments

--- a/TimeTrack.Api/appsettings.Development.json
+++ b/TimeTrack.Api/appsettings.Development.json
@@ -9,8 +9,14 @@
   "AuthOptions": {
     "GoogleClientId": "873312241155-bo2sieuo05s3f36gk4bc2u9ammbag744.apps.googleusercontent.com",
     "PublicKey": "",
-    "PrivateKey":  "",
+    "PrivateKey": "",
     "JwtAudience": "TimeTrackerWeb",
     "JwtIssuer": "TimeTrackerWebApiTokenIssuer"
+  },
+
+  "CorsOptions": {
+    "AllowedOrigins": [
+      "http://localhost:4200"
+    ]
   }
 }
